Updated for deployment settings

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 
-{% block title %}Home - Multi-Feature Web App{% endblock %}
+{% block title %}Home - LemuAPP Web App{% endblock %}
 
 {% block content %}
 <div class="row">
     <div class="col-md-12 text-center mb-5" data-aos="fade-down">
-        <h1 class="display-4 fw-bold mb-3">Welcome to <span style="color: var(--primary-color);">Multi-Feature</span> App</h1>
+        <h1 class="display-4 fw-bold mb-3">Welcome to <span style="color: var(--primary-color);">LemuAPP</span> App</h1>
         <p class="lead">Explore our powerful tools designed to make your tasks easier</p>
     </div>
 </div>
@@ -74,4 +74,4 @@
         transform: scale(1.1);
     }
 </style>
-{% endblock %} 
+{% endblock %}
